builder/tests/08-unrecognized-attribute.stderr
error: builder标签必须有each属性,当前有一个未知属性eac
  --> tests/08-unrecognized-attribute.rs:26:15
   |
26 |     #[builder(eac = "arg")]
   |               ^^^
